--- a/style.css
+++ b/style.css
@@ -73,6 +73,21 @@ footer {
   position: absolute;
   left: 20px;
 }
+/*CSS untuk Filter */
+
+.controls {
+  display: flex;
+  gap: 10px;
+  margin: 15px 0;
+}
+
+.controls input,
+.controls select {
+  padding: 8px;
+  font-size: 14px;
+}
+
+
 /* --- Tambahan perbaikan layout dan logo --- */
 
 /* Pastikan logo tampil proporsional */
